# mcp-stride-gpt

./: .dockerignore  .gitignore  .mcp.json  BETA_TESTING_GUIDE.md  CLAUDE.md  Dockerfile  MCP_DESIGN_PRINCIPLES.md  README.md  TESTING.md  app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  vercel.json
.claude-plugin/: marketplace.json  plugin.json
.github/: README.md
api/: index.py
docs/: repo.md
examples/: usage_example.md
server/: constants.py  errors.py  http_handler.py  mcp.py  tools.py  validation.py
skills/stride-threat-modelling/: EXAMPLES.md  SKILL.md
skills/stride-threat-modelling/assets/: stride-report.html
skills/stride-threat-modelling/references/: attack-trees.md  coverage-validation.md  dread-scoring.md  html-report.md  mitigations.md  repo-analysis.md  report-format.md  security-tests.md  stride-framework.md
tests/: README.md  __init__.py  conftest.py  test_http_handler.py  test_mcp_handler.py  test_mcp_protocol.py  test_tool_functions.py  test_tools.py
